<resources>
    <string name="app_name">Cards</string>
    <string name="help">Help</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="no_more_cards">No more cards to review</string>
    <string name="info_text_view_message">Number of remaining cards</string>
    <string name="due_cards_format">%d cards left</string>
    <!-- The analizer says it shoud be done like this, but it doesn't compile. Probably I'm not
    doing it well.
    <plurals name="due_cards_format">
        <item quantity="one">%d card left</item>
        <item quantity="other">%d cards left</item>
    </plurals> -->
    <string name="title_text">Cards</string>
    <string name="subtitle_text">Tap to study</string>
    <string name="easiness_list_item">Easiness %s</string>
    <string name="times_done">Times done %d</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="question_hint">Introduce the question</string>
    <string name="answer_hint">Introduce the answer</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="new_card_fab_description">Add card</string>
    <string name="decks_nav_menu_title">Decks</string>
    <string name="study_nav_menu_title">Review cards</string>
    <string name="statistics_nav_menu_title">Statistics</string>
    <string name="about">About</string>
    <string name="difficulty_pie_title">Difficulty</string>
    <string name="delete">Delete</string>
    <string name="hide">Hide</string>
    <string name="kevin" translatable="false">Kevin de la Coba Malam</string>
    <string name="kevin_description">Group: 2391 - Course 2021/2022</string>
    <string name="app_description">This is the cards App! Here you will be able to create decks, add cards and review them. Enjoy your learning!</string>
    <string name="show">Show</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="name_hint">Introduce the name</string>
    <string name="new_deck_fab_description">Add deck</string>
    <string name="ask_for_values">Introduce values in both, the question and the answer</string>
    <string name="drawer_desc">Drawer\'s header image</string>
    <string name="number_cards">Total cards %d</string>
    <string name="number_decks">Total decks %d</string>
    <string name="settings_menu_title">Settings</string>
    <string name="logout_menu_title">Logout</string>
    <string name="upload_cards">Upload cards</string>
    <string name="download_cards">Download cards</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_hint">Introduce the email</string>
    <string name="password_hint">Introduce the password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="app_login">Cards Login</string>
    <string name="signin_success">Sign-in successful</string>
    <string name="login_success">Log-in successful</string>
    <string name="signin_failure">Sign-in failure</string>
    <string name="login_failure">Log-in failure</string>
    <string name="ask_for_input">Introduce an email and a password</string>
    <string name="wrong_email_format">Wrong email format email@email.com</string>
    <string name="short_password">Password too short, minimum 8 characters</string>
    <string name="upload_success">Upload successful</string>
    <string name="download_success">Download successful</string>
    <string name="upload_fail">Upload failed</string>
    <string name="download_fail">Download failed</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="decks_header">Decks</string>

    <!-- Maximum number of cards Preferences -->
    <string name="max_number_cards">Maximum number of cards</string>

    <!-- Board Preferences -->
    <string name="board_title">Show board</string>
    <string name="board_summary_on">Board available</string>
    <string name="board_summary_off">Board unavailable</string>
</resources>